--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
   
   <div class="container-fluid">
     {%if safe==0%}
-    <span class="d-block p-2 bg-danger text-white"><center>Water is unsafe don't drink.</center></span>
+    <span class="d-block p-2 bg-danger text-white"><center>Water is not safe for drinking purpose don't drink.</center></span>
     {%elif safe==1%}
     <span class="d-block p-2 bg-info text-white"><center>Water is {{percent_of_safety|int}}% safe to drink.</center></span>
     {% else %}
